--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,10 @@
         "spatie/yaml-front-matter": "^2.0"
     },
     "require-dev": {
-        "behat/behat": "^3.4",
+        "behat/behat": "^3.8",
         "behat/mink-extension": "^2.3",
         "danack/coding-standard": "0.3.0",
-        "dmore/behat-chrome-extension": "^1.1",
+        "dmore/behat-chrome-extension": "^1.3",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/mink-goutte-driver": "^1.2",
         "mockery/mockery": "0.9.*",
@@ -44,7 +44,9 @@
         "phpstan/phpstan-strict-rules": "^0.12.9",
         "slevomat/coding-standard": "^7.2.1",
         "squizlabs/php_codesniffer": "^3.7.0",
-        "yoast/yoastcs": "1.0"
+        "yoast/yoastcs": "1.0",
+        "friends-of-behat/mink-extension": "^2.5",
+        "behat/mink-browserkit-driver": "^1.3"
     },
     "autoload": {
         "psr-0": {
@@ -63,6 +65,9 @@
         "platform": {
             "php": "8.0"
         },
-        "platform-check": false
+        "platform-check": false,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": false
+        }
     }
 }
