--- a/containers/php_fpm/Dockerfile
+++ b/containers/php_fpm/Dockerfile
@@ -17,9 +17,10 @@ RUN wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
 
 RUN  apt-get update -qq && \
      apt-get dist-upgrade -y && \
-     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y php8.0 php8.0-common php8.0-cli php8.0-fpm \
-     php8.0-mysql php8.0-curl php8.0-xml php8.0-mbstring \
-     php8.0-intl php8.0-redis php8.0-zip
+     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+     php8.1 php8.1-common php8.1-cli php8.1-fpm \
+     php8.1-mysql php8.1-curl php8.1-xml php8.1-mbstring \
+     php8.1-intl php8.1-redis php8.1-zip
 
 # Make the default directory you
 WORKDIR /var/app
