--- a/containers/varnish/Dockerfile
+++ b/containers/varnish/Dockerfile
@@ -1,32 +1,46 @@
-FROM debian:9
+FROM debian:10-slim
+
 
 
 USER root
 
 # Get Debian up-to-date
+# RUN apt-get update -qq \
+#     && DEBIAN_FRONTEND=noninteractive apt-get install -y git \
+#     wget curl varnish libmaxminddb0 psmisc \
+#     ca-certificates lsb-release apt-transport-https gnupg bsdmainutils
+#
+#
+# RUN apt-key del B188E2B695BD4743
+# RUN wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
+#
+# RUN echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/php.list
+
+
+# Get Debian up-to-date
 RUN apt-get update -qq \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y git \
-    wget curl varnish libmaxminddb0 psmisc \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    git wget curl varnish libmaxminddb0 psmisc \
     ca-certificates lsb-release apt-transport-https gnupg bsdmainutils
 
-
-RUN apt-key del B188E2B695BD4743
+# Install 3rd party PHP packages
+RUN echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/php.list
 RUN wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
 
-RUN echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/php.list
-
-# RUN curl -L https://packages.sury.org/php/apt.gpg | apt-key add -
-
-
-
-
 RUN  apt-get update -qq && \
-  apt-get dist-upgrade -y && \
-  DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-  git php8.0 \
-  php8.0-common php8.0-cli \
-  php8.0-mysql php8.0-curl php8.0-xml php8.0-mbstring \
-  php8.0-intl php8.0-redis php8.0-zip
+     apt-get dist-upgrade -y && \
+     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+     php8.1 php8.1-common php8.1-cli \
+     php8.1-mbstring \
+     php8.1-intl php8.1-zip
+
+# RUN  apt-get update -qq && \
+#   apt-get dist-upgrade -y && \
+#   DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+#   git php8.0 \
+#   php8.0-common php8.0-cli \
+#   php8.0-mysql php8.0-curl php8.0-xml php8.0-mbstring \
+#   php8.0-intl php8.0-redis php8.0-zip
 
 
 # Make the default directory you sh into
