--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3"
 services:
+  chrome_headless:
+    image: alpeware/chrome-headless-trunk
+    ports:
+      - "9222:9222"
+    cap_add:
+      - SYS_ADMIN
+    networks:
+      default_network:
+    security_opt:
+      - seccomp:unconfined
+      #extra_hosts:
+      #      - "local.phpimagick.com:imagick_php_backend"
+      # - "local.phpimagick.com:162.242.195.82"
   installer:
     build: containers/installer
     environment:
