--- a/containers/js_dev_builder/Dockerfile
+++ b/containers/js_dev_builder/Dockerfile
@@ -5,8 +5,9 @@ WORKDIR /var/app/app
 
 RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get install -y git
 
-RUN npm update
+# This is done in the installer
+# RUN npm update
 
-CMD tail -f /var/app/containers/js_dev_builder/README_npm.md
+# CMD tail -f /var/app/containers/js_dev_builder/README_npm.md
 
-# CMD npm run js:build:dev:watch
+CMD npm run js:build:dev:watch
