--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,8 @@ services:
   js_and_css_prod_builder:
     build: containers/npm
     environment:
-      # we don't set NODE_ENV as production, as that is for serving node requests, not building stuff.
-      - PHP_WEB_BUGS_BASE_URL=https://api.bristolian.org
+      # we don't set NODE_ENV as production, as that is for serving node requests, not building assets.
+      - BRISTOLIAN_API_BASE_URL=https://api.bristolian.org
       - ENV_DESCRIPTION=default,prod
     entrypoint: ["bash", "/var/app/containers/npm/build_prod_assets.sh"]
     volumes:
