Hopefully exclude built assets.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ containers/varnish/config/default.vcl
 containers/varnish/libvmod-geoip2-1.3.0
 site.css
 site.css.map
+app/public/js/app.bundle.js
+app/public/js/app.bundle.map
+app/public/js/app.bundle.map.gz
