--- a/composer.json
+++ b/composer.json
@@ -29,18 +29,13 @@
         "ext-pdo": "*"
     },
     "require-dev": {
-        "behat/behat": "^3.8",
-        "behat/mink-extension": "^2.3",
         "danack/coding-standard": "0.3.0",
-        "dmore/behat-chrome-extension": "^1.4.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "9.5.6",
         "phpstan/phpstan-strict-rules": "^0.12.9",
         "slevomat/coding-standard": "^7.2.1",
         "squizlabs/php_codesniffer": "^3.7.0",
-        "yoast/yoastcs": "1.0",
-        "friends-of-behat/mink-extension": "^2.5",
-        "behat/mink-browserkit-driver": "^1.3"
+        "yoast/yoastcs": "1.0"
     },
     "autoload": {
         "psr-0": {
