--- a/containers/mysql/config/my.cnf
+++ b/containers/mysql/config/my.cnf
@@ -16,9 +16,17 @@ sql_mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERR
 character-set-client-handshake = FALSE
 character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
+default_authentication_plugin=mysql_native_password
+
+
+authenication_policy = 'caching_sha2_password, sha256_password'
 
 [client]
 default-character-set = utf8mb4
+default_authentication_plugin=mysql_native_password
 
 [mysql]
 default-character-set = utf8mb4
+
+
+
