--- a/containers/js_builder/Dockerfile
+++ b/containers/js_builder/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM node:14.4.0-stretch-slim
+FROM node:19.1.0-bullseye-slim
 
 WORKDIR /var/app/app
 
@@ -8,6 +8,6 @@ RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get install -y git
 # This is done in the installer
 RUN npm update
 
-# CMD tail -f /var/app/containers/js_builder/README_npm.md
+CMD tail -f /var/app/containers/js_builder/README_npm.md
 
-CMD npm run js:build:dev:watch
+# CMD npm run js:build:dev:watch
