--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^14.18.23",
     "compression-webpack-plugin": "^3.0.1",
     "css-loader": "^3.6.0",
+    "jest": "^29.3.1",
     "raw-loader": "^4.0.2",
     "sass": "^1.54.3",
     "script-loader": "^0.7.2",
