Moving away from Auryn to Danack/Injector.

--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,22 @@
     "name": "danack/bristolian",
     "type": "project",
     "require": {
-        "danack/rfc-codex": "dev-master",
         "danack/configurator": "1.1.1",
         "danack/console": "^2.6",
         "danack/esprintf": "^2.0.0",
         "danack/looping-exec": "^0.3.0",
         "danack/json-safe": "^0.1.1",
-        "danack/slim4-auryn-invoker": "0.1.0",
+        "danack/slim-dispatcher": "dev-dev",
         "danack/typespec": "0.1.0",
         "dmore/chrome-mink-driver": "2.8.1",
         "ext-redis": "*",
         "justinrainbow/json-schema": "^5.2.7",
+        "laminas/laminas-diactoros":"^2.24.0",
         "ramsey/uuid": "4.0.1",
-        "rdlowrey/auryn": "^1.4.2",
+        "danack/injector": "^0.5.0",
         "seld/jsonlint": "^1.7",
         "slim/slim": "4.10.0",
         "tholu/php-cidr-match": "^0.2.0",
-        "danack/aurynconfig": "^0.9.1",
         "ext-json": "*",
         "ext-curl": "*",
         "michelf/php-markdown": "^1.9",
