--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,7 +29,7 @@ services:
       - "8002:8080"
   varnish:
     depends_on:
-#      - nginx
+#      - caddy
       - php_fpm
       - php_fpm_debug
     ports:
