--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,10 @@ services:
     environment:
       - COMPOSER_CACHE_DIR=/var/app/var/cache/composer
       - COMPOSER_ALLOW_SUPERUSER=1
+      - MYSQL_HOST=db
+      - MYSQL_DATABASE=bristolian
+      - MYSQL_USER=bristolian
+      - MYSQL_PASSWORD=p5ffrKSk4mPqN8vH
     networks:
       default_network:
     volumes:
