--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "phpstan/phpstan-strict-rules": "^0.12.9",
         "slevomat/coding-standard": "^7.2.1",
         "squizlabs/php_codesniffer": "^3.7.0",
-        "yoast/yoastcs": "1.0"
+        "yoast/yoastcs": "1.0",
+        "qossmic/deptrac-shim": "^1.0"
     },
     "autoload": {
         "psr-0": {
