--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-redis": "*",
         "justinrainbow/json-schema": "^5.2.7",
         "laminas/laminas-diactoros":"^2.24.0",
-        "ramsey/uuid": "4.0.1",
+        "ramsey/uuid": "^4.7",
         "danack/injector": "^0.5.0",
         "seld/jsonlint": "^1.7",
         "slim/slim": "4.10.0",
@@ -26,7 +26,8 @@
         "ext-posix": "*",
         "spatie/yaml-front-matter": "^2.0",
         "ext-pdo": "*",
-        "chillerlan/php-qrcode": "^4.3"
+        "chillerlan/php-qrcode": "^4.3",
+        "danack/php-unit-helper": "^0.5.0"
     },
     "require-dev": {
         "danack/coding-standard": "0.3.0",
