Jest tests are working. Twitter splitter has colouring to make it easier to see bugs if nothing else.

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,6 +4,7 @@
     "jsxFactory": "h",
     "module": "ES6",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "outDir": "./build/",
     "preserveConstEnums": true,
