--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "test": "./test"
   },
   "scripts": {
-    "js:test": "echo \\\"Error: no ../test specified\\\" && exit 1",
+    "js:test_gaah": "echo \\\"Error: no ../test specified\\\" && exit 1",
+    "test": "jest",
     "js:build:dev": "webpack --mode development",
     "js:build:dev:watch": "webpack --watch --mode development",
     "js:build:prod": "webpack --mode production",
@@ -45,6 +46,7 @@
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
     "timestamp-webpack-plugin": "^0.2.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
