--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,7 +91,8 @@ services:
     volumes:
       - .:/var/app
   redis:
-    image: redis:6.2.4
+    image: redis:7.0.11
+    # build: containers/redis
     volumes:
       - .:/var/app
     command: ["redis-server", "/var/app/containers/redis/config/redis.conf"]
