--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,6 +9,7 @@ parameters:
         - src/scrape_functions.php
     bootstrapFiles:
         - config.generated.php
+        - credentials.php
         - api/src/api_routes.php
     ignoreErrors:
         -
