--- a/containers/varnish/Dockerfile
+++ b/containers/varnish/Dockerfile
@@ -24,15 +24,15 @@ RUN apt-get update -qq \
     ca-certificates lsb-release apt-transport-https gnupg bsdmainutils
 
 # Install 3rd party PHP packages
-RUN echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/php.list
-RUN wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
+# RUN echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/php.list
+# RUN wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
 
-RUN  apt-get update -qq && \
-     apt-get dist-upgrade -y && \
-     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-     php8.1 php8.1-common php8.1-cli \
-     php8.1-mbstring \
-     php8.1-intl php8.1-zip
+# RUN  apt-get update -qq && \
+#      apt-get dist-upgrade -y && \
+#      DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+#      php8.1 php8.1-common php8.1-cli \
+#      php8.1-mbstring \
+#      php8.1-intl php8.1-zip
 
 # RUN  apt-get update -qq && \
 #   apt-get dist-upgrade -y && \
