Correct Caddy file to not use debug server.

--- a/containers/caddy/Caddyfile
+++ b/containers/caddy/Caddyfile
@@ -14,7 +14,7 @@
 
 *.bristolian.org:80, bristolian.org:80 {
 	root * /var/app/app/public
-	php_fastcgi php_fpm_debug:9000
+	php_fastcgi php_fpm:9000
 	file_server
 
 	@static {
