--- a/containers/mysql/config/my.cnf
+++ b/containers/mysql/config/my.cnf
@@ -19,7 +19,7 @@ collation-server = utf8mb4_unicode_ci
 default_authentication_plugin=mysql_native_password
 
 
-authenication_policy = 'caching_sha2_password, sha256_password'
+authentication_policy = 'caching_sha2_password, sha256_password'
 
 [client]
 default-character-set = utf8mb4
