--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "mailgun/mailgun-php": "^4.3",
         "symfony/http-client": "^7.1",
         "nyholm/psr7": "^1.8",
-        "ext-xmlreader": "*"
+        "ext-xmlreader": "*",
+        "auroras-live/suncalc-php": "dev-master"
     },
     "require-dev": {
         "danack/coding-standard": "0.3.0",
