Queues should be working including moon alert processor. Datetime columns are selected in sql queries, and sent to front end, where Luxon handles them.

--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,8 @@
     "url": "git://github.com/Danack/Bristolian.git"
   },
   "dependencies": {
+    "@types/luxon": "^3.4.2",
+    "luxon": "^3.5.0",
     "preact": "^10.11.3"
   },
   "devDependencies": {
