--- a/containers/supervisord/tasks/php_moon_alert.conf
+++ b/containers/supervisord/tasks/php_moon_alert.conf
@@ -1,12 +1,18 @@
 
-[program:watch_for_votes]
+[program:moon_alert]
 directory=/var/app
-command=php cli.php process:php_bugs:update_max_comment_id
+command=php cli.php process:moon_alert
 process_name=%(program_name)s_%(process_num)d
 user=www-data ; www-data user
 numprocs=1
 autostart=true
 autorestart=true
+;stdout_logfile=/var/app/log/moon_alert_stdout_%(process_num)d.log
+;stdout_logfile_maxbytes=10MB
+;stdout_logfile_backups=4
+;stderr_logfile=/var/app/log/moon_alert_stderr_%(process_num)d.log
+;stderr_logfile_maxbytes=10MB
+;stderr_logfile_backups=4
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
