--- a/containers/supervisord/tasks/php_daily_system_info.conf
+++ b/containers/supervisord/tasks/php_daily_system_info.conf
@@ -1,7 +1,7 @@
 
-[program:moon_alert]
+[program:daily_system_info]
 directory=/var/app
-command=php cli.php process:generate:moon_alert
+command=php cli.php process:generate:daily_system_info
 process_name=%(program_name)s_%(process_num)d
 user=www-data ; www-data user
 numprocs=1
