--- a/containers/supervisord/tasks/php_queue_email_send.conf
+++ b/containers/supervisord/tasks/php_queue_email_send.conf
@@ -1,7 +1,7 @@
 
-[program:moon_alert]
+[program:queue_email_send]
 directory=/var/app
-command=php cli.php process:generate:moon_alert
+command=php cli.php process:queue:email_send
 process_name=%(program_name)s_%(process_num)d
 user=www-data ; www-data user
 numprocs=1
