--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,16 @@
         "symfony/http-client": "^7.1",
         "nyholm/psr7": "^1.8",
         "ext-xmlreader": "*",
-        "auroras-live/suncalc-php": "dev-master"
+        "auroras-live/suncalc-php": "dev-master",
+
+
+
+        "psr/http-server-middleware": "^1.0.2",
+        "php" : "^8.2",
+        "ircmaxell/random-lib": "^1.1.0",
+        "ext-openssl": "*",
+        "ext-mbstring": "*"
+
     },
     "require-dev": {
         "danack/coding-standard": "0.3.0",
