Add debugging to process control.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ university_road
 /app/public/tsx/generated/constants.tsx
 composer_oauth_token.txt
 app/public/pdfjs-4.9.155-dist
+scripts/bcc_files_2025_07_25
+scripts/html_output
