--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ site.css.gz
 app/womens_coin
 university_road
 /app/public/tsx/generated/constants.tsx
+/src/Bristolian/Database/*.php
 composer_oauth_token.txt
 app/public/pdfjs-4.9.155-dist
 scripts/bcc_files_2025_07_25
