--- a/containers/supervisord/supervisord.conf
+++ b/containers/supervisord/supervisord.conf
@@ -9,6 +9,8 @@ logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/superv
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 
+stdout_maxbytes=0;
+
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
