--- a/containers/supervisord/supervisord.conf
+++ b/containers/supervisord/supervisord.conf
@@ -10,6 +10,8 @@ pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 
 stdout_maxbytes=0;
+logfile_maxbytes=0;
+
 
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
