--- a/containers/supervisord/supervisord.conf
+++ b/containers/supervisord/supervisord.conf
@@ -5,12 +5,10 @@ file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
 
 [supervisord]
-logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
-
-stdout_maxbytes=0;
-logfile_maxbytes=0;
+logfile=/dev/null
+logfile_maxbytes=0
 
 
 ; the below section must remain in the config file for RPC
