--- a/containers/supervisord/supervisord.conf
+++ b/containers/supervisord/supervisord.conf
@@ -11,6 +11,7 @@ logfile=/dev/null
 logfile_maxbytes=0
 
 
+
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
@@ -33,4 +34,5 @@ port=8080
 ; include files themselves.
 
 [include]
-files = /etc/supervisor/conf.d/*.conf
+; files = /etc/supervisord/conf.d/*.conf
+files = ./tasks/*.conf
