--- a/containers/supervisord/tasks/php_daily_system_info.conf
+++ b/containers/supervisord/tasks/php_daily_system_info.conf
@@ -7,14 +7,10 @@ user=www-data ; www-data user
 numprocs=1
 autostart=true
 autorestart=true
-;stdout_logfile=/dev/stdout
-; stdout_logfile_maxbytes=1MB
-;stderr_logfile=/dev/stderr
-; stderr_logfile_maxbytes=1MB
+stdout_logfile=/var/app/data/supervisord/daily_system_info.log
+stdout_logfile_maxbytes=0
+stderr_logfile=/var/app/data/supervisord/daily_system_info.log
+stderr_logfile_maxbytes=1MB
 ;log_stdout=false             ; if true, log program stdout (default true)
 ;log_stderr=false            ; if true, log program stderr (def false)
 
-
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
