--- a/containers/supervisord/tasks/php_moon_alert.conf
+++ b/containers/supervisord/tasks/php_moon_alert.conf
@@ -7,11 +7,10 @@ user=www-data ; www-data user
 numprocs=1
 autostart=true
 autorestart=true
-stdout_logfile=/var/app/data/supervisord
+stdout_logfile=/var/app/data/supervisord/moon_alert.log
 stdout_logfile_maxbytes=0
-stderr_logfile=/var/app/data/supervisord
+stderr_logfile=/var/app/data/supervisord/moon_alert.log
 stderr_logfile_maxbytes=1MB
 log_stdout=true             ; if true, log program stdout (default true)
 log_stderr=true             ; if true, log program stderr (def false)
-
 
