--- a/containers/supervisord/tasks/php_queue_email_send.conf
+++ b/containers/supervisord/tasks/php_queue_email_send.conf
@@ -7,7 +7,14 @@ user=www-data ; www-data user
 numprocs=1
 autostart=true
 autorestart=true
-log_stdout=false             ; if true, log program stdout (default true)
-log_stderr=false            ; if true, log program stderr (def false)
+stdout_logfile=/var/app/data/supervisord/email_send_err.log
+stdout_logfile_maxbytes=0
+stderr_logfile=/var/app/data/supervisord/email_send_err.log
+stderr_logfile_maxbytes=1MB
+log_stdout=true             ; if true, log program stdout (default true)
+log_stderr=true             ; if true, log program stderr (def false)
 
 
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
