Debugging why supervisor not running.

--- a/containers/supervisord/supervisord.conf
+++ b/containers/supervisord/supervisord.conf
@@ -35,4 +35,4 @@ port=8080
 
 [include]
 ; files = /etc/supervisord/conf.d/*.conf
-files = ./tasks/*.conf
+files = /var/app/containers/supervisord/tasks/*.conf
