--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,10 @@
     "js:build:dev": "webpack --mode development",
     "js:build:dev:watch": "webpack --watch --mode development",
     "js:build:prod": "webpack --mode production",
+    "js:build:prod:analyze": "webpack --mode production --analyze",
     "js:build:prod:watch": "webpack --watch --mode production",
-    "stats_old": "webpack --profile",
-    "stats": "webpack --stats=detailed --json",
+
+    "stats:console": "node stats-console.js",
     "sass:build:dev": "sass public/scss/site.scss public/css/site.css",
     "sass:build:prod": "sass public/scss/site.scss public/css/site.css --style=compressed",
     "sass:build:watch": "sass public/scss/site.scss public/css/site.css --watch"
@@ -32,8 +33,6 @@
     "url": "git://github.com/Danack/Bristolian.git"
   },
   "dependencies": {
-    "@types/luxon": "^3.4.2",
-    "luxon": "^3.5.0",
     "preact": "^10.11.3"
   },
   "devDependencies": {
